<resources>
    <string name="app_name">BookLog</string>
    <string name="header">Enter Details To Authenticate</string>
    <string name="email">Enter you email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>